kubernetes/apps/monitoring/promlens/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promlens
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
spec:
  ingressClassName: external
  rules:
    - host: "promlens.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: promlens
                port:
                  number: 8080
  tls:
    - hosts:
        - "promlens.${SECRET_DOMAIN}"
